Move two images to reduce alignment issues on portfolio-3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,16 +261,16 @@ nav {
 }
 
 .image {
-    display: inline-block;
+/*   display: inline-block;  */
     margin-bottom: 1rem;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .item:hover {
      filter: brightness(100%);
      transform: scale(1.1);
-
-
 }
 /* To give the effect of when you scroll of the image with finger or mouse it will expand slightly & enhance slightly in colour  */
 .item {
@@ -278,12 +278,20 @@ nav {
     transition: .5s ease-in-out;
     padding-bottom: 1rem;
     width: 100%;
-    height: 100%;
+/*    height: 100%; */
+
 }
 .item img {
     max-width: 100%;
-    height: auto;
+    height:inherit;
     position: relative;
+}
+#item-1 img {
+    filter: brightness(75%);
+    transition: .5s ease-in-out;
+    padding-bottom: 1rem;
+  /*  width: 100%; */
+    height: auto;
 }
 
 footer {
